@@ -51,6 +51,7 @@ t/22-partitions.t
 t/23-gcd.t
 t/24-bernfrac.t
 t/25-pi.t
+t/26-combinatorial.t
 t/26-digits.t
 t/26-ismisc.t
 t/26-lambertw.t
